--- a/cakify/src/design/main.scss
+++ b/cakify/src/design/main.scss
@@ -2295,3 +2295,8 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+
+    // **for selectbox,readio button border
+    .boxBorder{
+      border: solid 1px rgba(210, 215, 217, 0.75);
+    }
