--- a/cakify-live-ui/src/design/main.scss
+++ b/cakify-live-ui/src/design/main.scss
@@ -2299,3 +2299,6 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+    .boxBorder{
+      border: solid 1px rgba(210, 215, 217, 0.75);
+    }
